--- a/views/Layout/layout.ejs
+++ b/views/Layout/layout.ejs
@@ -15,6 +15,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+        <link rel = "stylesheet" href = "./CSS/<%= pagename %>.css">
+
     <title>Base</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -28,7 +30,7 @@
         <ul class="navbar-nav mr-auto">
       
             <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
+                <a class="nav-link" href="/pointsForm">Form</a>
             </li>
         </ul>
        
