--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,24 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="container">
+  <div class="row min-vh-100">
+    <div class="col">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Firebase Server Auth</title>
-  <link rel="stylesheet" href="./mvp.css" />
-</head>
 
-<body>
-  <main>
-    <section>
+ 
+
       <form id="signup">
-        <label>Signup</label>
-        <input type="text" name="login" />
-        <label>Password</label>
-        <input type="password" name="password" />
-        <button>Sign up</button>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" class="form-control" name = "login">
+          
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input type="password" class="form-control" name = "password">
+        </div>
+        
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-    </section>
+
+
+    </div>
+  </div>
+</div>
+
+
+  
+
+
 
     <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-auth.js"></script>
@@ -74,7 +83,4 @@
           return false;
         });
     </script>
-  </main>
-</body>
-
-</html>
+ 
