--- a/views/Layout/layout.ejs
+++ b/views/Layout/layout.ejs
@@ -20,7 +20,7 @@
     <title>Base</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">SELC</a>
+    <a class="navbar-brand" href=".">SELC</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
