--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,19 +3,39 @@
     <div class="col">
 
 
- 
+
 
       <form id="signup">
+
         <div class="form-group">
+
+          <label>
+            First Name
+          </label>
+          <input type="text" class="form-control" name="firstName">
+
+        </div>
+
+        <div class="form-group">
+
+          <label>
+            Last Name
+          </label>
+
+          <input type="text" class="form-control" name="lastName">
+
+        </div>
+        <div class="form-group">
+
           <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" name = "login">
-          
+          <input type="email" class="form-control" name="login">
+
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" name = "password">
+          <input type="password" class="form-control" name="password">
         </div>
-        
+
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
 
@@ -25,66 +45,70 @@
 </div>
 
 
-  
 
 
 
-    <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-auth.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 
-    <script>
-      const firebaseConfig = {
-        apiKey: "AIzaSyCic5UWC0fXladccjESHt2eEUFR3GCpu7k",
-        authDomain: "test-73b01.firebaseapp.com",
-        databaseURL: "https://test-73b01.firebaseio.com",
-        projectId: "test-73b01",
-        storageBucket: "test-73b01.appspot.com",
-        messagingSenderId: "622256382010",
-        appId: "1:622256382010:web:305e70e752a5a757c2d503"
-      };
+<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-auth.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 
-      firebase.initializeApp(firebaseConfig);
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCic5UWC0fXladccjESHt2eEUFR3GCpu7k",
+    authDomain: "test-73b01.firebaseapp.com",
+    databaseURL: "https://test-73b01.firebaseio.com",
+    projectId: "test-73b01",
+    storageBucket: "test-73b01.appspot.com",
+    messagingSenderId: "622256382010",
+    appId: "1:622256382010:web:305e70e752a5a757c2d503"
+  };
 
-      firebase.auth().setPersistence(firebase.auth.Auth.Persistence.NONE);
+  firebase.initializeApp(firebaseConfig);
 
-      document
-        .getElementById("signup")
-        .addEventListener("submit", (event) => {
-          event.preventDefault();
-          const login = event.target.login.value;
-          const password = event.target.password.value;
+  firebase.auth().setPersistence(firebase.auth.Auth.Persistence.NONE);
 
-          firebase
-            .auth()
-            .createUserWithEmailAndPassword(login, password)
-            .then(({ user }) => {
-              return user.getIdToken().then((idToken) => {
-                console.log(63, user.uid);
-                return fetch("/sessionLogin", {
-                  method: "POST",
-                  headers: {
-                    Accept: "application/json",
-                    "Content-Type": "application/json",
-                    "CSRF-Token": Cookies.get("XSRF-TOKEN"),
-                  },
-                  body: JSON.stringify({ 
-                    idToken,
-                    "uid": user.uid, 
-                    email: login,
-                  }),
-                });
-              
+  document
+    .getElementById("signup")
+    .addEventListener("submit", (event) => {
+      event.preventDefault();
+      const login = event.target.login.value;
+      const password = event.target.password.value;
+      const firstName = event.target.firstName.value;
+      const lastName = event.target.lastName.value;
 
-              });
-            })
-            .then(() => {
-              return firebase.auth().signOut();
-            })
-            .then(() => {
-              //window.location.assign("/profile");
+
+      firebase
+        .auth()
+        .createUserWithEmailAndPassword(login, password)
+        .then(({ user }) => {
+          return user.getIdToken().then((idToken) => {
+
+            return fetch("/sessionLogin", {
+              method: "POST",
+              headers: {
+                Accept: "application/json",
+                "Content-Type": "application/json",
+                "CSRF-Token": Cookies.get("XSRF-TOKEN"),
+              },
+              body: JSON.stringify({
+                idToken,
+                "uid": user.uid,
+                email: login,
+                firstName,
+                lastName
+              }),
             });
-          return false;
+
+
+          });
+        })
+        .then(() => {
+          return firebase.auth().signOut();
+        })
+        .then(() => {
+          window.location.assign("/profile");
         });
-    </script>
- 
+      return false;
+    });
+</script>
