Updated structure of code

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,10 @@
 
 <body>
-  Testing this file
+  
+  <% for(var i = 0; i < dataArray.length; i++) { %> 
+
+    <%= dataArray[i].points %>
+  
+  <% } %> 
   
 </body>
