--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,60 +1,63 @@
+<form id="login">
+  <label>Login</label>
+  <input type="text" name="login" />
+  <label>Password</label>
+  <input type="password" name="password" />
+  <button>Log in</button>
+</form>
+
+</section>
 
 
-      <form id="login">
-        <label>Login</label>
-        <input type="text" name="login" />
-        <label>Password</label>
-        <input type="password" name="password" />
-        <button>Log in</button>
-      </form>
-   
-    </section>
 
-    <script>
-      window.addEventListener("DOMContentLoaded", () => {
-        const firebaseConfig = {
-          apiKey: "AIzaSyCic5UWC0fXladccjESHt2eEUFR3GCpu7k",
-          authDomain: "test-73b01.firebaseapp.com",
-          databaseURL: "https://test-73b01.firebaseio.com",
-          projectId: "test-73b01",
-          storageBucket: "test-73b01.appspot.com",
-          messagingSenderId: "622256382010",
-          appId: "1:622256382010:web:305e70e752a5a757c2d503"
-        };
+<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-auth.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 
-        firebase.initializeApp(firebaseConfig);
-        firebase.auth().setPersistence(firebase.auth.Auth.Persistence.NONE);
-        document
-          .getElementById("login")
-          .addEventListener("submit", (event) => {
-            event.preventDefault();
-            const login = event.target.login.value;
-            const password = event.target.password.value;
+<script>
+  window.addEventListener("DOMContentLoaded", () => {
+    const firebaseConfig = {
+      apiKey: "AIzaSyCic5UWC0fXladccjESHt2eEUFR3GCpu7k",
+      authDomain: "test-73b01.firebaseapp.com",
+      databaseURL: "https://test-73b01.firebaseio.com",
+      projectId: "test-73b01",
+      storageBucket: "test-73b01.appspot.com",
+      messagingSenderId: "622256382010",
+      appId: "1:622256382010:web:305e70e752a5a757c2d503"
+    };
 
-            firebase
-              .auth()
-              .signInWithEmailAndPassword(login, password)
-              .then(({ user }) => {
-                return user.getIdToken().then((idToken) => {
-                  return fetch("/sessionLogin", {
-                    method: "POST",
-                    headers: {
-                      Accept: "application/json",
-                      "Content-Type": "application/json",
-                      "CSRF-Token": Cookies.get("XSRF-TOKEN"),
-                    },
-                    body: JSON.stringify({ idToken }),
-                  });
-                });
-              })
-              .then(() => {
-                return firebase.auth().signOut();
-              })
-              .then(() => {
-                window.location.assign("/profile");
+    firebase.initializeApp(firebaseConfig);
+    firebase.auth().setPersistence(firebase.auth.Auth.Persistence.NONE);
+    document
+      .getElementById("login")
+      .addEventListener("submit", (event) => {
+        event.preventDefault();
+        const login = event.target.login.value;
+        const password = event.target.password.value;
+
+        firebase
+          .auth()
+          .signInWithEmailAndPassword(login, password)
+          .then(({ user }) => {
+            return user.getIdToken().then((idToken) => {
+              return fetch("/sessionLogin", {
+                method: "POST",
+                headers: {
+                  Accept: "application/json",
+                  "Content-Type": "application/json",
+                  "CSRF-Token": Cookies.get("XSRF-TOKEN"),
+                },
+                body: JSON.stringify({ idToken }),
               });
-            return false;
+            });
+          })
+          .then(() => {
+            return firebase.auth().signOut();
+          })
+          .then(() => {
+            window.location.assign("/profile");
           });
+        return false;
       });
-    </script>
- 
+  });
+</script>
