--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,33 @@
-
 <body>
-  
-  <% for(var i = 0; i < dataArray.length; i++) { %> 
 
-    <%= dataArray[i].points %>
-  
-  <% } %> 
-  
+
+  <table class="table">
+    <thead>
+      <tr>
+
+        <th scope="col">Place</th>
+        <th scope="col">Name</th>
+        <th scope="col">Points</th>
+      </tr>
+    </thead>
+    <tbody>
+
+
+      <% for(var i = 0; i < dataArray.length; i++) { %>
+
+
+      <tr>
+        <th scope="row">
+          <%= i + 1%>
+        </th>
+        <td> <%= dataArray[i].firstName %> <%= dataArray[i].lastName %></td>
+        <td> <%= dataArray[i].points %></td>
+      </tr>
+
+      <% } %>
+
+
+    </tbody>
+  </table>
+
 </body>
