--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,25 @@
-<form id="login">
-  <label>Login</label>
-  <input type="text" name="login" />
-  <label>Password</label>
-  <input type="password" name="password" />
-  <button>Log in</button>
-</form>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <form id="login">
+        <div class="form-group">
+          <label>Email address</label>
+          <input type="email" class="form-control" name="login">
 
-</section>
+        </div>
+        <div class="form-group">
+          <label>Password</label>
+          <input type="password" class="form-control" name="password">
+        </div>
+
+        <button type="submit" class="btn btn-primary">
+          Login
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
+
 
 
 
@@ -55,7 +68,7 @@
             return firebase.auth().signOut();
           })
           .then(() => {
-            window.location.assign("/profile");
+            window.location.assign("profile");
           });
         return false;
       });
