Updated logic for updating team and points

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,29 +1,60 @@
 <div class="container">
-    <div class="row mt-5">
-        <div class="col-12 col-md-4">
-            <div class="card dark-blue-bg-color align-items-center">
-                <img src="./Images/Leaderboard/personIcon2.svg" class="card-img-top maxIconSize mt-3" alt="...">
-                <div class="card-body">
-                  <h5 class="card-admin-text">
-                      <%= dataArray.length %> Accounts
-                  </h5>
-                </div>
-              </div>
+  <div class="row mt-5">
+    <div class="col-12 col-md-4">
+      <div class="card dark-blue-bg-color align-items-center">
+        <img src="./Images/Leaderboard/personIcon2.svg" class="card-img-top maxIconSize mt-3" alt="...">
+        <div class="card-body">
+          <h5 class="card-admin-text">
+            <%= dataArray.length %> Accounts
+          </h5>
         </div>
-        <div class="col-12 col-md-4">
-            <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                </div>
-              </div>
-        </div>
-        <div class="col-12 col-md-4">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                </div>
-              </div>
-        </div>
+      </div>
     </div>
+    <div class="col-12 col-md-4">
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mt-5">
+    <div class ="col">
+      <table class="table table-sm">
+        <thead class = "thead-dark">
+          <tr>
+
+            <th scope="col">Place</th>
+            <th scope="col">Name</th>
+            <th scope="col">Points</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for(var i = 0; i < dataArray.length; i++) { %>
+
+
+          <tr>
+            <th scope="row">
+              <%= i + 1%>
+            </th>
+            <td> <%= dataArray[i].firstName %> <%= dataArray[i].lastName %></td>
+            <td> <%= dataArray[i].points %></td>
+          </tr>
+
+          <% } %>
+
+
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 </div>
