--- a/views/Layout/layout.ejs
+++ b/views/Layout/layout.ejs
@@ -15,7 +15,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
-        <link rel = "stylesheet" href = "./CSS/<%= pagename %>.css">
+    <link rel="stylesheet" href="./CSS/<%= pagename %>.css">
+    <link rel="stylesheet" href="./CSS/global.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
 
     <title>Base</title>
 </head>
@@ -28,12 +30,12 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-      
+
             <li class="nav-item">
                 <a class="nav-link" href="/pointsForm">Form</a>
             </li>
         </ul>
-       
+
     </div>
 </nav>
 
