--- a/views/Layout/layout.ejs
+++ b/views/Layout/layout.ejs
@@ -34,6 +34,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/pointsForm">Form</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/signup">Signup</a>
+            </li>
         </ul>
 
     </div>
