Updated dashboard with workshop info

--- a/public/SCSS/dashboard.scss
+++ b/public/SCSS/dashboard.scss
@@ -1,6 +1,12 @@
+$UVSASE-blue: #009fb7;
+
 
 .dark-blue-bg-color {
-    background-color: #009fb7;
+    background-color: $UVSASE-blue;
+}
+
+.thead-blue {
+    background-color: $UVSASE-blue;
 }
 
 .maxIconSize {
@@ -11,4 +17,14 @@
 .card-admin-text {
     color: white;
     font-size: 1.5rem;
+}
+
+.workshopName {
+    font-size: 16px;
+    text-align: center;
+}
+
+.numberRegistered {
+    font-size: 12px;
+    text-align: center;
 }
