--- a/public/CSS/dashboard.css
+++ b/public/CSS/dashboard.css
@@ -2,6 +2,10 @@
   background-color: #009fb7;
 }
 
+.thead-blue {
+  background-color: #009fb7;
+}
+
 .maxIconSize {
   height: 64px;
   width: 64px;
@@ -10,4 +14,14 @@
 .card-admin-text {
   color: white;
   font-size: 1.5rem;
+}
+
+.workshopName {
+  font-size: 16px;
+  text-align: center;
+}
+
+.numberRegistered {
+  font-size: 12px;
+  text-align: center;
 }
