--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row mt-5">
-    <div class="col-12 col-md-4">
+    <div class="col-12 col-md-6 mb-5 mb-md-0">
       <div class="card dark-blue-bg-color align-items-center">
-        <img src="./Images/Leaderboard/personIcon2.svg" class="card-img-top maxIconSize mt-3" alt="...">
+        <img src="./Images/Dashboard/personIcon2.svg" class="card-img-top maxIconSize mt-3" alt="...">
         <div class="card-body">
           <h5 class="card-admin-text">
             <%= dataArray.length %> Accounts
@@ -10,48 +10,44 @@
         </div>
       </div>
     </div>
-    <div class="col-12 col-md-4">
-      <div class="card">
-       
+
+    <div class="col-12 col-md-6">
+      <div class="card dark-blue-bg-color align-items-center">
+        <img src="./Images/Dashboard/workshopIcon.svg" class="card-img-top maxIconSize mt-3" alt="...">
         <div class="card-body">
-          <table class="table table-sm">
-            <thead class = "thead-dark">
-              <tr>
-    
-                <th scope="col">Name</th>
-                <th scope="col">Email</th>
-              </tr>
-            </thead>
-            <tbody>
-              <% for(var i = dataArray.length - 1; i > (dataArray.length - 4); i--) { %>
-    
-    
-              <tr>
-         
-                <td> <%= dataArray[i].firstName %> <%= dataArray[i].lastName %></td>
-                <td> <%= dataArray[i].email %></td>
-              </tr>
-    
-              <% } %>
-    
-    
-            </tbody>
-          </table>
+          <h5 class="card-admin-text">
+            <div class="row">
+              <table class="table table-sm text-white border-top-0">
+                <thead>
+                  <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Registered</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% for(var i = 0; i < dataArray2.length; i++) {  %>
+                  <tr>
+                    <td>
+                      <%= dataArray2[i].name %>
+                    </td>
+                    <td class = "text-center">
+                      <%= dataArray2[i].attendees.length %>
+                    </td>
+                  </tr>
+                  <% } %>
+                </tbody>
+              </table>
+            </div>
+          </h5>
         </div>
-      </div>
-    </div>
-    <div class="col-12 col-md-4">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
       </div>
     </div>
   </div>
 
   <div class="row mt-5">
-    <div class ="col">
+    <div class="col">
       <table class="table table-sm">
-        <thead class = "thead-dark">
+        <thead class="thead-blue text-white">
           <tr>
 
             <th scope="col">Place</th>
