Updated dashboard to add button to edit points and teams

--- a/public/CSS/dashboard.css
+++ b/public/CSS/dashboard.css
@@ -6,6 +6,16 @@
   background-color: #009fb7;
 }
 
+.btn-UVSASE-darkblue {
+  background-color: #114b5f;
+  color: #FFFFFF;
+  font-weight: bold;
+}
+
+.btn-UVSASE-darkblue:hover {
+  color: #009fb7;
+}
+
 .maxIconSize {
   height: 64px;
   width: 64px;
