Updated signup form

--- a/views/Layout/layout.ejs
+++ b/views/Layout/layout.ejs
@@ -32,7 +32,9 @@
         <ul class="navbar-nav mr-auto">
 
             <li class="nav-item">
-                <a class="nav-link" href="/pointsForm">Form</a>
+                <a class="nav-link" href="/login">
+                    Login
+                </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/signup">Signup</a>
