--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,11 +1,11 @@
+
+<div class="container-fluid gradient-bg ">
+
+
 <div class="container">
-  <div class="row min-vh-100">
-    <div class="col">
-
-
-
-
-      <form id="signup">
+  <div class="row min-vh-100 align-items-center justify-content-center py-5">
+    <div class="col-12 col-xl-6 bg-red">
+      <form class = "w-100" id="signup">
 
         <div class="form-group">
 
@@ -36,15 +36,20 @@
           <input type="password" class="form-control" name="password">
         </div>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">
+          Register
+        </button>
       </form>
 
 
     </div>
+    <div class = "col-12 col-xl-6 px-0">
+      <img class = "img-fluid maxHeight" src = "./Images/Signup/bg2.png">
+    </div>
   </div>
 </div>
 
-
+</div>
 
 
 
