--- a/views/teamForm.ejs
+++ b/views/teamForm.ejs
@@ -11,7 +11,7 @@
 
                         <% for(var i=0; i < dataArray.length; i++) { %>
                         <option> <%= dataArray[i].firstName %> <%= dataArray[i].lastName %>
-                            (<%= dataArray[i].email %>) </option>
+                            (<%= dataArray[i].email %>) - <%= dataArray[i].teamName %> </option>
                         <% } %>
                     </select>
 
